# udp-broadcast-relay-rs

./: CONTRIBUTORS.md  Cargo.toml  Dockerfile  README.md
src/: main.rs
usage-notes/pfsense-config/: README.md  udp-broadcast-relay.sh
